--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^12.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
+    "motion": "^12.23.25",
     "next": "16.0.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
