--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.53.0",
